--- a/src/main/java/resources/about.html
+++ b/src/main/java/resources/about.html
@@ -1,41 +1,48 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>TODO supply a title</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    </head>
-    <body>
+<!DOCTYPE html><html><head><meta charset="utf-8"><title>Untitled Document</title><style></style></head><body>
         <img src="file:doc/axoloti_icon.png">
-        <h1><a href="http://www.axoloti.be">Axoloti</a></h1>
-        v0.3 alpha<br>
-        Copyright (C) 2013, 2014 Johannes Taelman<p>
-            Axoloti is free software: you can redistribute it and/or modify it under the
-            terms of the GNU General Public License as published by the Free Software
-            Foundation, either version 3 of the License, or (at your option) any later
-            version.<p>
-            Axoloti is distributed in the hope that it will be useful, but WITHOUT ANY
-            WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR
-            A PARTICULAR PURPOSE. See the GNU General Public License for more details.
-        <p>
-            You should have received a copy of the GNU General Public License along with
-            Axoloti. If not, see <a href = "http://www.gnu.org/licenses/">http://www.gnu.org/licenses/</a>.
-
-        <h2><a href="file:doc/user%20guide.html">User guide (incl. known bugs)</a></h2>
-
-        <h2>Get involved!</h2>
-        There are three mailinglists: <ul>
-            <li><a href="https://groups.google.com/d/forum/axoloti-announce">axoloti-announce</a> : low-traffic mailinglist with announcements only
-            <li><a href="https://groups.google.com/d/forum/axoloti-users">axoloti-users</a> : user discussion
-            <li><a href="https://groups.google.com/d/forum/axoloti-dev">axoloti-dev</a> : developer discussion
+        <h2 id="axoloti-http-www-axoloti-com-"><a href="http://www.axoloti.com/">Axoloti/</a></h2>
+        <h3 id="license">License</h3>
+        <p>v0.5 
+            Copyright (C) 2013, 2014, 2015 Johannes Taelman</p>
+        <p>Axoloti is free software: you can redistribute it and/or modify it under
+            the terms of the GNU General Public License as published by the Free
+            Software Foundation, either version 3 of the License, or (at your option)
+            any later version.</p>
+        <p>Axoloti is distributed in the hope that it will be useful, but WITHOUT ANY
+            WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
+            FOR A PARTICULAR PURPOSE. See the GNU General Public License for more
+            details.</p>
+        <p>You should have received a copy of the GNU General Public License along
+            with Axoloti. If not, see <a href="http://www.gnu.org/licenses/">http://www.gnu.org/licenses/</a>.</p>
+        <h3 id="user-guide-incl-known-bugs-">User guide (incl. known bugs)</h3>
+        <h3 id="get-involved-">Get involved!</h3>
+        <p>Axoloti was conceived as a community project, where members could help and
+            inspire each other to make the most of Axoloti.</p>
+        <p>Please join the community forum at <a href="http://community.axoloti.com">http://community.axoloti.com</a>, where you will also find announcements,
+            latest update and support for Axoloti.</p>
+        <h3 id="acknowledgments">Acknowledgments</h3>
+        <p>The initial Axoloti development was partially funded by iMinds
+            <a href="http://www.iminds.be/">http://www.iminds.be/</a> under the ART&amp;D project call and developed at EDM
+            <a href="http://www.edm.uhasselt.be/">http://www.edm.uhasselt.be/</a>, the Expertise centre for Digital Media, the
+            ICT research institute of Hasselt University.</p>
+        <p>I'd like to also thank, all the beta testers that have helped me during
+            Axoloti's development, with special thanks to Tim Vets, Karl Pannek
+            (aka logsol) and Mark Harris (aka TheTechnobear) for their valuable
+            contributions to Axoloti.</p>
+        <h3 id="dependencies">Dependencies</h3>
+        <p>Axoloti is built on the following open source projects, I'd like to express
+            my gratitude to their respective developers for their work.</p>
+        <ul>
+            <li>ChibiOS</li>
+            <li>GCC-arm-none-eabi</li>
+            <li>LibUSB</li>
+            <li>Usb4java</li>
+            <li>dfu-util</li>
+            <li>Simple-xml</li>
+            <li>Java</li>
         </ul>
-        Please subscribe at least to axoloti-announce!
+        <p>I hope you enjoy exploring Axoloti,</p>
+        <p>Johannes</p>
 
-        <h2>Acknowledgements</h2>
-        The initial Axoloti development is partially funded by <a href="http://www.iminds.be">iMinds</a> under the ART&amp;D project call  
-        and developed at <a href="http://www.edm.uhasselt.be">EDM</a>, the Expertise centre for Digital Media, the ICT research institute of Hasselt University. 
+    </body></html>
 
-        <h2>Thanks!</h2>
-        To everyone involved in testing!
-    </body>
-</html>
